apps/vagrant/download-sabnzbd/deploy/statefulSet-resources.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sabnzbd
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: sabnzbd
        resources:
          requests:
            cpu: 200m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 256Mi
