apps/vagrant/download-sabnzbd/deploy/ingress-homepage-widget.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabnzbd
  annotations:
    gethomepage.dev/widget.key: "abcdefghijklmnopqrstuvwxyz123456"
